Use a GPid on gdk_spawn_on_screen[_with_pipes] instead a gint

Reported by Nick Schermer in bug
https://bugzilla.gnome.org/show_bug.cgi?id=602289