gdk/x11/gdkspawn-x11.c
@@ -83,7 +83,7 @@ gdk_spawn_on_screen (GdkScreen             *screen,
 		     GSpawnFlags            flags,
 		     GSpawnChildSetupFunc   child_setup,
 		     gpointer               user_data,
-		     gint                  *child_pid,
+		     GPid                  *child_pid,
 		     GError               **error)
 {
   UserChildSetup setup_data;
@@ -143,7 +143,7 @@ gdk_spawn_on_screen_with_pipes (GdkScreen            *screen,
 				GSpawnFlags           flags,
 				GSpawnChildSetupFunc  child_setup,
 				gpointer              user_data,
-				gint                 *child_pid,
+				GPid                 *child_pid,
 				gint                 *standard_input,
 				gint                 *standard_output,
 				gint                 *standard_error,
